# chemworkbench

./: makefile  pyproject.toml
app/: api.py  main.py
app/static/: demo.html
core/: base_processor.py  data_models.py  dispatcher.py  file_sniffer.py  pipeline.py  registry.py  validator.py
data/: sample_uvvis.csv
processors/: simpleprops.py
processors/ir/: plotter.py  processor.py  reader.py  writer.py
processors/nmr/: plotter.py  processor.py  reader.py  writer.py
processors/uvvis/: plotter.py  processor.py  reader.py  writer.py
schema/: molecule.json
tests/: test_processors.py  test_validator.py
